      and Paul Gevers.  (Closes: #526435)
    + [RA] Downgrade certainty of tags for which we recommend overrides.
      Patch from Raphael Geissert.  (Closes: #530008)
    + [ADB] Don't consider an 64-bit kernel module shipped in a binary
      package for the corresponding 32-bit architecture to be "from other
      architecture".  (Closes: #532013)
  * checks/control-file{,.desc}:
    + [ADB] Refer to main, contrib and non-free as archive areas rather
      than categories.
    + [ADB] Rename section-category-mismatch to section-area-mismatch.
    + [ADB] Update the description of section-area-mismatch to clarify
      that source packages in main may build binary packages in contrib.
    + [RA] Skip duplicate description checks for udeb packages.  Thanks,
      Thijs Kinkhorst.  (Closes: #529924)
    + [ADB] Warn about missing spaces between items in a control file which
      have been omitted when spanning the dependency line over multiple
      lines.  Based on a patch by Damyan Ivanov.  (Closes: #516706)
  * checks/cruft{,.desc}:
    + [RA] Downgrade certainty of tags for which we recommend overrides.
      Patch from Raphael Geissert.
    + [RA] When looking for tar errors from dpkg-source, ignore gpgv
      output as well as gpg output.
  * checks/debhelper.desc:
    + [ADB] Correct Unpack-Level to 1.  Thanks, Raphael Geissert.
  * checks/fields{,.desc}:
    + [RA] Allow python << dependencies without Python-Version if the
      package depends on python-support, which doesn't use the
      Python-Version field.  Adjust the long description of
      old-versioned-python-dependency to make it clearer it only applies
      to python-central.  Thanks, Bernd Zeimetz.  (Closes: #525997)
    + [ADB] Refer to contrib and non-free as "archive areas" rather than
      distributions.
    + [ADB] Accept Architecture fields in .dsc files which contain both
      "all" and one or more binary architectures.  (Closes: #530565)
  * checks/files{,.desc}: